# fragpipe-runner

./: README.md  pyproject.toml
src/fragpipe_runner/: __init__.py  execute.py  manifest.py  workflow.py
