[project]
name = "fragpipe-runner"
version = "0.1.0"
description = "A Python library to simplify and support the execution of FragPipe when running in command-line mode."
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "David M. Hollenstein", email = "hollenstein.david@gmail.com" },
]
requires-python = ">=3.10"
dependencies = []